...
    @EnvironmentObject var serviceContainer: BaseServiceContainer
    
    var body: some View {
        TabView {
            DeviceListView()
                .tabItem {
                    Label("Lights", systemImage: "lightbulb.fill")
                }
            
            SceneGalleryView()
                .tabItem {
                    Label("Scenes", systemImage: "theatermasks.fill")
                }
...
